--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,8 @@
 {
-    "description": "Project configuration file",
+    "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
     "packOptions": {
-        "ignore": []
+        "ignore": [],
+        "include": []
     },
     "setting": {
         "urlCheck": true,
@@ -44,7 +45,8 @@
         "minifyWXML": true,
         "showES6CompileOption": false,
         "useCompilerPlugins": false,
-        "ignoreUploadUnusedFiles": true
+        "ignoreUploadUnusedFiles": true,
+        "useStaticServer": true
     },
     "compileType": "miniprogram",
     "libVersion": "2.23.3",
@@ -52,14 +54,7 @@
     "projectname": "%E7%89%A9%E5%93%81%E5%80%9F%E7%94%A8%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F",
     "miniprogramRoot": "miniprogram/",
     "cloudfunctionRoot": "cloudfunctions/",
-    "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
-    "watchOptions": {
-        "ignore": []
-    },
-    "debugOptions": {
-        "hidedInDevtools": []
-    },
-    "scripts": {},
+    "cloudfunctionTemplateRoot": "cloudfunctionTemplate/",
     "condition": {
         "plugin": {
             "list": []
@@ -73,5 +68,10 @@
         "miniprogram": {
             "list": []
         }
+    },
+    "srcMiniprogramRoot": "miniprogram/",
+    "editorSetting": {
+        "tabIndent": "insertSpaces",
+        "tabSize": 4
     }
 }
