--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,15 +1,8 @@
 {
-    "setting": {},
+    "setting": {
+        "compileHotReLoad": true
+    },
     "condition": {
-        "plugin": {
-            "list": []
-        },
-        "game": {
-            "list": []
-        },
-        "gamePlugin": {
-            "list": []
-        },
         "miniprogram": {
             "list": [
                 {
@@ -51,10 +44,12 @@
                     "name": "userInfo",
                     "pathName": "pages/userInfo/index",
                     "query": "",
-                    "scene": null,
-                    "launchMode": "default"
+                    "launchMode": "default",
+                    "scene": null
                 }
             ]
         }
-    }
+    },
+    "projectname": "BorrowingManagement",
+    "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
 }
