--- a/project.private.config.json
+++ b/project.private.config.json
@@ -62,6 +62,13 @@
                     "name": "about",
                     "pathName": "pages/about/index",
                     "query": "",
+                    "launchMode": "default",
+                    "scene": null
+                },
+                {
+                    "name": "version",
+                    "pathName": "pages/version/index",
+                    "query": "",
                     "scene": null,
                     "launchMode": "default"
                 }
