--- a/project.config.json
+++ b/project.config.json
@@ -39,6 +39,7 @@
         "minifyWXML": true,
         "showES6CompileOption": false,
         "useCompilerPlugins": false,
+        "ignoreDevUnusedFiles": false,
         "ignoreUploadUnusedFiles": false,
         "condition": false
     },
