--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,7 +1,7 @@
 {
     "setting": {
         "compileHotReLoad": true,
-        "urlCheck": false,
+        "urlCheck": true,
         "useIsolateContext": true
     },
     "projectname": "BorrowingManagement",
